dist_man1_MANS=

if BUILD_KAWRAD
  dist_man1_MANS+=kawrad.1
endif

if ENABLE_QT
  dist_man1_MANS+=kawra-qt.1
endif

if BUILD_KAWRA_CLI
  dist_man1_MANS+=kawra-cli.1
endif

if BUILD_KAWRA_TX
  dist_man1_MANS+=kawra-tx.1
endif

if BUILD_KAWRA_UTIL
  dist_man1_MANS+=kawra-util.1
endif

if ENABLE_WALLET
if BUILD_KAWRA_WALLET
  dist_man1_MANS+=kawra-wallet.1
endif
endif
